fix scrollbar styling; fix input wrapper cursor on scrollbar;

--- a/src/ui/element/CustomElement.css
+++ b/src/ui/element/CustomElement.css
@@ -5,42 +5,42 @@
     position: relative;
     box-sizing: border-box;
 }
+
+/* scrollbar */
 ::-webkit-scrollbar {
-    width: var(--scrollbar-size, 12px);
-    height: var(--scrollbar-size, 12px);
+    width: var(--scrollbar-size, 16px);
+    height: var(--scrollbar-size, 16px);
 }
 ::-webkit-scrollbar-button {
-    width: var(--scrollbar-button-size, 0px);
-    height: var(--scrollbar-button-size, 0px);
-    background: var(--scrollbar-button-color, #ffffff);
-    border-width: var(--scrollbar-button-border-width, 0px);
-    border-style: var(--scrollbar-button-border-style, none);
-    border-color: var(--scrollbar-button-border-color,transparent);
-    border-radius: var(--scrollbar-button-border-radius, 0px);
+    width: 0px;
+    height: 0px;
 }
-::-webkit-scrollbar-button:hover {
-    background: var(--scrollbar-button-hover-color, #aaaaaa);
-}
-::-webkit-scrollbar-thumb {
-    background: var(--scrollbar-thumb-color, #ffffff);
-    border-width: var(--scrollbar-thumb-border-width, 0px);
-    border-style: var(--scrollbar-thumb-border-style, none);
-    border-color: var(--scrollbar-thumb-border-color,transparent);
-    border-radius: var(--scrollbar-thumb-border-radius, 0px);
-}
-::-webkit-scrollbar-thumb:hover {
-    background: var(--scrollbar-thumb-hover-color, #aaaaaa);
+::-webkit-scrollbar-corner {
+    background: var(--scrollbar-corner-color, #f1f1f1);
 }
 ::-webkit-scrollbar-track {
-    background: var(--scrollbar-track-color, #000000);
+    background: var(--scrollbar-track-color, #f1f1f1);
     border-width: var(--scrollbar-track-border-width, 0px);
     border-style: var(--scrollbar-track-border-style, none);
-    border-color: var(--scrollbar-track-border-color,transparent);
+    border-color: var(--scrollbar-track-border-color, transparent);
     border-radius: var(--scrollbar-track-border-radius, 0px);
 }
 ::-webkit-scrollbar-track:hover {
-    background: var(--scrollbar-track-hover-color, #aaaaaa);
+    background: var(--scrollbar-track-color-hover, #f1f1f1);
 }
-::-webkit-scrollbar-corner {
-    background: transparent;
+::-webkit-scrollbar-track:active {
+    background: var(--scrollbar-track-color-active, #f1f1f1);
+}
+::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-thumb-color, #c1c1c1);
+    border-width: var(--scrollbar-thumb-border-width, 2px);
+    border-style: var(--scrollbar-thumb-border-style, solid);
+    border-color: var(--scrollbar-thumb-border-color, #f1f1f1);
+    border-radius: var(--scrollbar-thumb-border-radius, 0px);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: var(--scrollbar-thumb-color-hover, #999999);
+}
+::-webkit-scrollbar-thumb:active {
+    background: var(--scrollbar-thumb-color-active, #747474);
 }
